# PrefSuite

./: Cargo.toml  README.md  build_app.sh
.github/: dependabot.yml
.github/workflows/: build_all.yml  build_arm64.yml  build_x64.yml  keep_caches.yml  optimize_caches.yml  optimize_caches.yml.actuallynevermind
src/: app.rs  main.rs
src/app/: helpers.rs  menus.rs  password.rs
src/app/menus/: about.rs  bluetooth.rs  main_menu.rs  sip.rs  sound.rs  template.rs  wallpaper.rs  wifi.rs
