[package]
name = "PrefSuite"
version = "0.1.0"
edition = "2024"

[dependencies]
# GUI
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["image", "file"] }
image = "~0.25.6"
rfd = "~0.15.3"




rusqlite = { version = "0.35.0", features = ["bundled"] }

strum = "~0.27.1"
strum_macros = "~0.27.1"

# I saw somewhere, someone said that adding this just to kill a process is bloat. Sadly, I agree
sysinfo = "~0.34.2"

os_info = { version = "~3.10.0", default-features = false }

env_logger = "~0.11.8"
log = "~0.4.27"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = "~0.3.1"

objc2-core-wlan = "~0.3.1"
objc2-io-bluetooth = "~0.3.1"

libloading = "~0.8.6"